--- a/AccessCounter.html
+++ b/AccessCounter.html
@@ -9,29 +9,13 @@ body {
   background-color: #000;
 }
 
-table {
-  margin-top: 55px;
+iframe {
+  width: 229px;
+  height: 130px;
 }
 </style>
 </head>
 <body>
-<center>
-<table border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td align="center">
-<img src="http://www.rays-counter.com/d1261_f6_022/63e632ccae5ba/" alt="アクセスカウンター" border="0">
-</td>
-</tr>
-<tr>
-<td align="center" style="font-size:xx-small">
-<img src="http://www.rays-counter.com/images/counter_01.gif" border="0">
-<img src="http://www.rays-counter.com/images/counter_02.gif" border="0">
-<img src="http://www.rays-counter.com/images/counter_03.gif" border="0">
-<img src="http://www.rays-counter.com/images/counter_04.gif" border="0">
-<img src="http://www.rays-counter.com/images/counter_05.gif" border="0">
-</td>
-</tr>
-</table>
-</center>
+<iframe title="アクセスカウンター" src="http://21emon.wjg.jp:1751/counter/count.php"></iframe>
 </body>
 </html>
