--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -9,9 +9,9 @@
 <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
 <!--
   *----------------------------------
-  |  ThisPageVersion: 21.3        |
+  |  ThisPageVersion: 21.6        |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-02-07       |
+  |  LastUpdate: 2023-02-16       |
   |  ・。・プシューページ㌨       |
 ----------------------------------*
 -->
@@ -74,6 +74,7 @@
       <p>プログラミング（ハイパーテキスト、JS、Kotlin）、電子工作（音が鳴るもの）、考える事（ほぼ何でも）、工作（小屋づくり、小物づくり）、料理（オムライス、チャーハン、半熟目玉焼き）、縫い物（穴あき修正、小物づくり）、理科（電気関連）、農業（農作物育て）</p>
 
     <h3>最後に</h3>
+      <p>このページは、横幅が250px以下のサイズでは非対応ですので予めご了承ください。</p>
       <p>ご質問、お問い合わせまたはご意見、ご感想がありましたら、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
       <p>このページではプシューログを見たり、プシューが提供しているサービス等で楽しむことができます。</p>
       <p>このサービス（ページ）では、できるだけ依存しない、できるだけオープンソースで（<a href="https://github.com/PusyuuOfficial/WebSite" target="_blank">ソースコードはこちら</a>）、サービス上での情報収集をできるだけ行わないをモットーに作成してます。</p>
@@ -313,7 +314,7 @@
 
     <h2 id="p5">ニュース</h2>
       <h3>更新情報</h3>
-        <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、プシューログにコンテンツを追加、プシューの部屋を少し更新、プシューサービス更新、ニュース情報を更新、細かなバグ修正などを行いました。 このページのバージョン21.3</marquee>
+        <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、少々ページ全体のデザインを変更、ニュース情報を更新、細かなバグ修正などを行いました。 このページのバージョン21.6</marquee>
 
       <h3>ニコニコ動画始めました！！</h3>
         <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
