--- a/Profile/index.html
+++ b/Profile/index.html
@@ -3,19 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<link rel="shortcut icon" href="../../システムフォルダー/アイコンデータ/favicon.ico">
+<link rel="shortcut icon" href="../SystemFolder/IconData/favicon.ico">
 <title>プシューページ - 公式プロフィール</title>
-<script src="1.js"></script>
 <link rel="stylesheet" href="GateProStyle.css">
+   <!--
+       *----------------------------------
+       |  ThisPageVersion: 5.3         |
+       |  © 2021-2023 By Pusyuu        |
+       |  LastUpdate: 2023-02-16       |
+       |  ・。・プロフィール㌨         |
+     ----------------------------------*
+   -->
 </head>
 <body>
 <div class="bokasi">
 
 <h1>プシュー公式について</h1>
+  <div class="center">
+  <div class="profile_component">
   <div class="profile">
-  <div class="example">
   <h2>プシュー公式プロフィール</h2>
-  <div class="avator_image_center">
+  <div class="center">
   <div class="avator_image">
   <img src="./pro.jpg" alt="ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   </div>
@@ -31,15 +39,17 @@
   <th>好きな趣味は</th><td>プログラミング（ハイパーテキスト、JS、Kotlin）、電子工作（音が鳴るもの）、考える事（ほぼ何でも）、工作（小屋づくり、小物づくり）、料理（オムライス、チャーハン、半熟目玉焼き）、縫い物（穴あき修正、小物づくり）、理科（電気関連）、農業（農作物育て）</td>
   </tr>
   </table>
+  <h3>コメント<h3>
+  <p style="color: #4d4d4d;">このサービス（ページ）では、できるだけ依存しない、できるだけオープンソースで（<a href="https://github.com/PusyuuOfficial/WebSite" target="_blank">ソースコードはこちら</a>）、サービス上での情報収集をできるだけ行わないをモットーに作成してます。
+  このページは、1からWindows標準NotePad.exeを使用して、コーディングしてます。
+  私ごとですが、ASD、ADHDを、持ってます。</p>
   </div>
   </div>
-<h3>コメント<h3>
-<p>このサービス（ページ）では、できるだけ依存しない、できるだけオープンソースで（<a href="https://github.com/PusyuuOfficial/WebSite" target="_blank">ソースコードはこちら</a>）、サービス上での情報収集をできるだけ行わないをモットーに作成してます。</p>
-<p>このページは、1からWindows標準NotePad.exeを使用して、コーディングしてます。</p>
-<p>私ごとですが、ASD、ADHDを、持ってます。</p>
+  </div>
+
 <h3>プシュー公式アカウント一覧</h3>
 <p><a href="https://www.nicovideo.jp/user/125051420"  target="_blank">プシュー公式ニコニコ動画</a></p>
-<p><a href="https://twitter.com/Pusyuuofficial" target="_blank">プシュー公式ツイッターへジャンプ</a></p>
+<p><a href="https://twitter.com/PusyuuOfficial" target="_blank">プシュー公式ツイッター</a></p>
 <p><a href="../MainHtml/index-1.html" target="_blank">プシューページへ行く</a></p>
 <h3>問い合わせフォーム</h3>
 <p><a href="http://21emon.wjg.jp:1751/contact.php">このページのお問い合わせはこちら</a></p>
