--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    <link rel="stylesheet" href="./Profile/GateProStyle.css">
    <!--
        *----------------------------------
-       |  ThisPageVersion: 5.2         |
+       |  ThisPageVersion: 5.3         |
        |  © 2021-2023 By Pusyuu        |
-       |  LastUpdate: 2023-01-25       |
+       |  LastUpdate: 2023-02-16       |
        |  ・。・ゲートウェイ㌨         |
      ----------------------------------*
    -->
@@ -23,7 +23,10 @@
     <p>プシューゲートウェイでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.2</p>
     <h2>問い合わせの方法</h2>
     <p>何かほかに追加してほしいことや希望、やってほしいことや文句など、あればプシューページ、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
-    <center><iframe width="250px" height="150vh" title="アクセスカウンター" src="./AccessCounter.html"></iframe><img width="250px" height="150vh" src="./SystemFolder/IconData/logo-black.png" alt="入り口用ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"></center>
+    <center>
+    <li><iframe width="180vw" height="100vh" title="アクセスカウンター" src="http://21emon.wjg.jp:2016/AccessCounter.html"></iframe><li>
+    <li><img width="180vw" height="100vh" src="./SystemFolder/IconData/logo-black.png" alt="入り口用ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"><li>
+    </center>
     <h3>通常版プシューページへはこちら↓</h3>
     <p>プシューページでは、プシューログ（プシューの心理的な知恵や面白いことを書いたブログ）やプシューサービス（音楽のストリーミングや、プシューが作った自作アプリを使ったり見たりできるサービス）などを見ることができます。</p>
     <button type=“button” onclick="location.href='./MainHtml/index-1.html'">通常版プシューページへ行く</button>
