--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -9,9 +9,9 @@
 <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
 <!--
   *----------------------------------
-  |  ThisPageVersion: 21.6        |
+  |  ThisPageVersion: 21.7        |
   |  © 2021-2023 By Pusyuu        |
-  |  LastUpdate: 2023-02-16       |
+  |  LastUpdate: 2023-02-18       |
   |  ・。・プシューページ㌨       |
 ----------------------------------*
 -->
@@ -47,12 +47,8 @@
 
 <div class="show">
   <strong>PusyuuWorld</strong>
-  <//img>
-    <source type="image/jpg" src="" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
-  </img>
-  <video controlsList="nodownload" muted autoplay playsinline loop oncontextmenu="return false;" preload="auto">
-    <source type="video/mp4" src="../SystemFolder/VideoData/Show.mp4">
-  </video>
+  <//video src="../SystemFolder/VideoData/Show-video.mp4" controlsList="nodownload" muted autoplay playsinline loop oncontextmenu="return false;" preload="auto">
+  <img src="../SystemFolder/ImageData/Show-img.jpg" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
 </div>
 
 <main class="main">
@@ -314,7 +310,7 @@
 
     <h2 id="p5">ニュース</h2>
       <h3>更新情報</h3>
-        <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、少々ページ全体のデザインを変更、ニュース情報を更新、細かなバグ修正などを行いました。 このページのバージョン21.6</marquee>
+        <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、少々ページ全体のデザインを変更、ニュース情報を更新、細かなバグ修正などを行いました。 このページのバージョン21.7</marquee>
 
       <h3>ニコニコ動画始めました！！</h3>
         <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
