--- a/SystemFolder/SubHtml/s-MultiMedia.html
+++ b/SystemFolder/SubHtml/s-MultiMedia.html
@@ -15,10 +15,10 @@ body {
 <h1>以下のリストからメディア選択してね❕</h1>
 
 <h2>FrogTube</h2>
-<a href="./FrogTube.html"><img src="../IconData/img-0.png" alt="" width="550" height="350"oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
+<a href="./m-FrogTube.html"><img src="../IconData/img-0.png" alt="" width="550" height="350"oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
 
 <h2>音楽、ラジオ</h2>
-<a href="./MusicRadio.html"><img src="../IconData/img-17.png" alt="" width="550" height="350"oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
+<a href="./m-MusicRadio.html"><img src="../IconData/img-17.png" alt="" width="550" height="350"oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
 
 <h2>ホームに戻る</h2>
 <a href="../../MainHtml/index-1.html#p3"><img src="../IconData/img-1.png" alt="" width="550" height="350"oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0"></a>
