--- a/SystemFolder/SubHtml/s-yakudatenaipage.html
+++ b/SystemFolder/SubHtml/s-yakudatenaipage.html
@@ -29,7 +29,7 @@
   <//img>
     <source type="image/jpg" src="" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   </img>
-  <video autoplay="" loop="true" width="1280" height="720" poster="../ImageData/NanimoyakunitatanaiPage.png" onclick="this.paused ? this.play() : this.pause();">
+  <video loop="true" width="1280" height="720" poster="../ImageData/NanimoyakunitatanaiPage.png" onclick="this.paused ? this.play() : this.pause();">
     <source type="video/mp4" src="../VideoData/YakunitatanaiVideo.mp4">
   </video>
 </div>
