--- a/Profile/index.html
+++ b/Profile/index.html
@@ -8,9 +8,9 @@
 <link rel="stylesheet" href="GateProStyle.css">
    <!--
        *----------------------------------
-       |  ThisPageVersion: 5.3         |
+       |  ThisPageVersion: 5.4         |
        |  © 2021-2023 By Pusyuu        |
-       |  LastUpdate: 2023-02-16       |
+       |  LastUpdate: 2023-02-20       |
        |  ・。・プロフィール㌨         |
      ----------------------------------*
    -->
@@ -42,7 +42,7 @@
   <h3>コメント<h3>
   <p style="color: #4d4d4d;">このサービス（ページ）では、できるだけ依存しない、できるだけオープンソースで（<a href="https://github.com/PusyuuOfficial/WebSite" target="_blank">ソースコードはこちら</a>）、サービス上での情報収集をできるだけ行わないをモットーに作成してます。
   このページは、1からWindows標準NotePad.exeを使用して、コーディングしてます。
-  私ごとですが、ASD、ADHDを、持ってます。</p>
+  どうでもよいですがネタとして言います。私は、ASD、ADHDを、持ってます。</p>
   </div>
   </div>
   </div>
