--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -58,7 +58,7 @@
                   <h1>名前は: プシュー</h1>
                 </div>
                 <div class="avater">
-                  <img src="../SystemFolder/IconData/avater.jpg" class="avater_image">
+                  <img src="../SystemFolder/IconData/avater.jpg" alt="画像" class="avater_image" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
                 </div>
                   <table>
                     <tr>
@@ -77,7 +77,7 @@
                       <th>好きな趣味</th><td>プログラミング（ハイパーテキスト、JS、Kotlin）、電子工作（音が鳴るもの）、考える事（ほぼ何でも）、工作（小屋づくり、小物づくり）、料理（オムライス、チャーハン、半熟目玉焼き）、縫い物（穴あき修正、小物づくり）、理科（電気関連）、農業（農作物育て）</td>
                     </tr>
                   </table>
-                <p>プシューはADHD,ASDを持ってます。私は特にそのことでおっくうには感じてません一つの得意分野としてとらえ成長が遅いだけなので人一倍勉強しながらそれなりに楽しみながら生活してます</p>
+                <p>私としてはどうでもよいですがネタとして一応伝えます。プシューは先天性のADHDとASDを持ってます。私は特にそのことでおっくうには感じてません一つの得意分野としてとらえ成長が遅いだけなので人一倍勉強しながらそれなりに、めんどくさいので以下省略w</p>
               </div>
             </div>
           <h3>このページの仕様</h3>
@@ -163,7 +163,7 @@
                   </a>
                 </article>
                 <article class="blog_card">
-                  <a href="" class="blog_card_link">
+                  <a href="../SystemFolder/SubHtml/b-situkoi.html" class="blog_card_link">
                     <span class="blog_card_label">New</span>
                     <img class="blog_card_image" src="../SystemFolder/ImageData/akutoku_shouhou_denwa_kanyu.png" alt="ブログイメージ" oncontextmenu="return false;" onselse;" onselectstart="return false;" onmousedown="return false;"ボタン" border="0">
                     <div class="blog_card_info">
