--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-  <html lang="ja">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=6.0, minimum-scale=1.0">
-      <title>PusyuuPage - メインページ</title>
-      <link rel="stylesheet" href="../SystemFolder/CssData/Style-1.css">
-      <link rel="shortcut icon" href="../SystemFolder/IconData/favicon.ico">
-      <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
-      <!--
-        *----------------------------------
-        |  ThisPageVersion: 22.0        |
-        |  © 2021-2023 By Pusyuu        |
-        |  LastUpdate: 2023-02-19       |
-        |  ・。・プシューページ㌨       |
-      ----------------------------------*
-      -->
-    </head>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=6.0, minimum-scale=1.0">
+    <title>PusyuuPage - メインページ</title>
+    <link rel="stylesheet" href="../SystemFolder/CssData/Style-1.css">
+    <link rel="shortcut icon" href="../SystemFolder/IconData/favicon.ico">
+    <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
+    <!--
+      *----------------------------------
+      |  ThisPageVersion: 22.1        |
+      |  © 2021-2023 By Pusyuu        |
+      |  LastUpdate: 2023-02-22       |
+      |  ・。・プシューページ㌨       |
+    ----------------------------------*
+    -->
+  </head>
   <body>
     <header class="header">
       <div class="header_nav">
@@ -192,7 +192,7 @@
         <section id="p5">
           <h2>ニュース</h2>
             <h3>更新情報</h3>
-              <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、ニュース情報を更新、全体的にページをリニューアル、細かなバグ修正などを行いました。 このページのバージョン22.0</marquee>
+              <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザインを変更、細かなバグ修正などを行いました。 このページのバージョン22.1</marquee>
             <h3>ニコニコ動画始めました！！</h3>
               <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
               <p>新規での動画は、皆さんに紹介したいこと等をアップロードしていきたいです。</p>
