--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -9,9 +9,9 @@
     <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
     <!--
       *----------------------------------
-      |  ThisPageVersion: 22.1        |
+      |  ThisPageVersion: 22.2        |
       |  © 2021-2023 By Pusyuu        |
-      |  LastUpdate: 2023-02-22       |
+      |  LastUpdate: 2023-02-26       |
       |  ・。・プシューページ㌨       |
     ----------------------------------*
     -->
@@ -45,8 +45,9 @@
     </header>
       <div class="show">
         <strong>PusyuuWorld</strong>
-        <//video src="../SystemFolder/VideoData/Show-video.mp4" controlsList="nodownload" muted autoplay playsinline loop oncontextmenu="return false;" preload="auto">
-        <img src="../SystemFolder/ImageData/Show-img.jpg" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+        <div class="scroll">SCROLL<span class="arw"></span></div>
+        <video src="../SystemFolder/VideoData/Show-video.mp4" controlsList="nodownload" muted autoplay playsinline loop oncontextmenu="return false;" preload="auto">
+        <//img src="../SystemFolder/ImageData/Show-img.jpg" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
       </div>
     <main class="main">
       <div class="main_yohaku">
@@ -192,15 +193,15 @@
         <section id="p5">
           <h2>ニュース</h2>
             <h3>更新情報</h3>
-              <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザインを変更、細かなバグ修正などを行いました。 このページのバージョン22.1</marquee>
+              <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザインを変更などを行いました。 このページのバージョン22.2</marquee>
             <h3>ニコニコ動画始めました！！</h3>
               <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
               <p>新規での動画は、皆さんに紹介したいこと等をアップロードしていきたいです。</p>
               <p class="text"><a href="https://www.nicovideo.jp/user/125051420" target="_blank">プシューわんこのニコニコ動画へジャンプ</a></p>
             <h3>ツイッター始めました！！</h3>
               <p>ツイッターではプシューサービスの最新情報などを発信していきたいです。</p>
-              <p>とうとうツイッターやめました一年間ありがとうございました。様々な人、年代の方々と様々な話をしましたがどれも良い思い出です。合計35人のフォロワー。最後に、ご迷惑もおかけしましたが皆さんありがとう私は嬉しかったです。
-              と思いきやまた始めました今回からはプシューサービスの最新情報発信を目的としてやっていきます。</p>
+              <p>とうとうツイッターやめました一年間ありがとうございました。様々な人、年代の方々と様々な話をしましたがどれも良い思い出です。合計35人のフォロワー。最後に、ご迷惑もおかけしましたが皆さんありがとう私は嬉しかったです。</p>
+              <p>と思いきやまた始めました今回からはプシューサービスの最新情報発信を目的としてやっていきます。</p>
               <p class="text"><a href="https://twitter.com/Pusyuuofficial" target="_blank">プシュー公式ツイッターへジャンプ</a></p>
         </section>
         <section id="p6">
