--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -9,9 +9,9 @@
     <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
     <!--
       *----------------------------------
-      |  ThisPageVersion: 22.2        |
+      |  ThisPageVersion: 22.3        |
       |  © 2021-2023 By Pusyuu        |
-      |  LastUpdate: 2023-02-26       |
+      |  LastUpdate: 2023-02-27       |
       |  ・。・プシューページ㌨       |
     ----------------------------------*
     -->
@@ -193,7 +193,7 @@
         <section id="p5">
           <h2>ニュース</h2>
             <h3>更新情報</h3>
-              <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザインを変更などを行いました。 このページのバージョン22.2</marquee>
+              <marquee bgcolor="#FFFFFF" scrollamount="4">このバージョンでは、ニュース情報を更新、更にデザインを変更などを行いました。 このページのバージョン22.3</marquee>
             <h3>ニコニコ動画始めました！！</h3>
               <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
               <p>新規での動画は、皆さんに紹介したいこと等をアップロードしていきたいです。</p>
