--- a/SystemFolder/SubHtml/b-negative.html
+++ b/SystemFolder/SubHtml/b-negative.html
@@ -40,7 +40,7 @@
 </ol>
 
   <h3 id="p1">ネガティブとは？</h3>
-  <img src="../ImageData/考えるイラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/kangaeru.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   <p>まぁ何それおいしいの？と思った人もいるかと思うので一応説明しときます。
 そもそもネガティブとは何でしょう、簡単に言ってしまえばネガティブとはマイナスな、考えをすることです。ポジティブとはさっきとは逆のプラスの考えをすることです。
 最初に行っときますが、ネガティブだからダメかというとそういうわけでもないみたいですよ！？　</p>
@@ -54,19 +54,19 @@
 
   <h3 id="p2">逆にポジティブなほうが良いのか</h3>
   <p>それは違います、ポジティブすぎると不注意になりやすい傾向にあります。下手したら怪我をしますので、多少なりともネガティブは必要なのです。</p>
-  <img src="../ImageData/迷いイラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/mayoi.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   <h3 id="p3">じゃあネガティブだったら良いのか</h3>
   <p>それもまた違います。ネガティブすぎるのも不安になりすぎたり、少しのことでも気にしすぎたりしてしまいます。下手したら病気になってしまいます。</p>
 
   <h3 id="p4">結果</h3>
-  <img src="../ImageData/結果イラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/kekka.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   <p>結果どちらか片方ではだめなことがわかりましたよね？、なんでもそうですが偏りが出ると人間は不調を起こします。
 そのためプシューがおすすめするのは今回の場合は自信をつけることをお勧めします。理由は、自信をつけることでネガティブさの上に自信ができるわけですから、
 自分のできると事を明確にしやすくし多少ネガティブさに襲われても自分はこんなことできるのだから大丈夫だと思うことができます。
 ということは自信も先ほども言った通りやりすぎには、注意が必要です。ですがそこまで神経質になる必要はありません。頭の片隅に置いとくだけで十分です。</p>
 
   <h3 id="p5">自信をつける</h3>
-  <img src="../ImageData/自信イラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/zisin.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
 <p>そもそも何故人間は、ネガティブになるのでしょうか？それは、自分に自信がなく、それを隠すかのように自分にプライドを高く見積もってしまうことがあるからです。
 （プライドに関しては人によりますが説明しておきます。）　なのでまずはそのプライドを捨てましょう...ってそんなこと言ってもプライドはなくなりません。そのために自信をつけるのです、
 それだけではありません、自信をつけることで、ネガティブさを安定させることができます、なので、ネガティブを無くす必要はないのです。
