--- a/SystemFolder/SubHtml/b-situkoi.html
+++ b/SystemFolder/SubHtml/b-situkoi.html
@@ -38,7 +38,7 @@
 </ol>
 
   <h3 id="p1">しつこいとは？</h3>
-  <img src="../ImageData/考えるイラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/kangaeru.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   <p>しつこいとは何、そしてなぜ起きるのか、ふと疑問に思ったのでまぁメモ書き程度ですが、ブログにしました。
 しつこい、それは嫌と感じるほどに、付きまとうあるいは物事を聞くまたは言うこと、なんだか嫌がらせに似ているが、少し違ってくる。</p>
 <p>引用goo辞書↓</p>
@@ -51,14 +51,14 @@
   <p>引用しました。</p>
 
   <h3 id="p2">しつこさを知るために</h3>
-  <img src="../ImageData/迷いイラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/mayoi.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   <p>私は、しつこさとは何かを知るためにいろいろな人に聞きましたしそれをシミュレーションもしました、ですがなんだかしっくりきませんでした。
 でもこんなことをしているうちに、理由を聞くこと自体にしつこさを生んでいる気がしました。なのでこの方法は断念。
 ですが、上記のことをやっているうちに気が付いたのが、人によって個人差があり、価値観などで変動することがわかりました。</p>
 
 
   <h3 id="p3">結果</h3>
-  <img src="../ImageData/結果イラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/kekka.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   <p>最終的にしつこさを起こさないようにするために、以下のことをやることでしつこさを調整できます。
 ※完全になくすことは、人間の性質上不可能です。まず、空気を読み周りの人はどれくらいかかわると良くないのかを知ることができます。
 それで距離感をつかみ、人の良い関係を作ることができます。ですがSNSなどのメッセージや音声などで距離感を掴むのは、非常に難しく、時間がかかります。
