--- a/SystemFolder/SubHtml/b-web.html
+++ b/SystemFolder/SubHtml/b-web.html
@@ -79,7 +79,7 @@
 
   <h3>最後に、さらに詳しく知りたい方はこちら</h3>
 <p>今回は初心者でもわかりやすく、勉強できるテンプレートをプシューが作りました。このテンプレートでは、CSSとHTMLを学習できます。
-  <a href="../../PusyuuTemplate.zip">テンプレートのダウンロードはこちら<a>
+  テンプレートの(<a href="../../PusyuuTemplate.zip">ダウンロードはこちら</a>)
   ダウンロードが完了したら、ダウンロードしたZIPファイルを解凍してください。
   解凍したら、(必ずお読みください)を読んでください。
   そしたら(必ずお読みください)は、書き方手順も載っておりますので、開いたまま、index.htmlを編集してみてください。</p>
