--- a/SystemFolder/SubHtml/b-denwanasiseikatu.html
+++ b/SystemFolder/SubHtml/b-denwanasiseikatu.html
@@ -39,7 +39,7 @@
 </ol>
 
   <h3 id="p1">携帯電話会社とは？</h3>
-  <img src="../ImageData/考えるイラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/kangaeru.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   <p>今回は、携帯電話会社と契約しなくても生活は可能なのかを検証してみたのでブログにしてみました。
   いつも皆さんが使っているそのスマートフォン、どこで契約されているでしょうか？  大抵ですと王手三社（ドコモ、エーユー、ソフトバンク）だと思います。
   携帯電話会社で契約をするとスマートフォンや、シムカード、ポケットWi-Fiなどの機器の購入や、契約の再変更などの様々な手続きを行うことができ、サポートもしてくれます。
@@ -52,7 +52,7 @@
   </p>
 
   <h3 id="p3">解約したが最終的にどんな方法をとったのか</h3>
-  <img src="../ImageData/迷いイラスト.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+  <img src="../ImageData/mayoi.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
   <p>  私が解約してから行った準備、それはまず電話は使えないと当時学生であり遅刻の連絡などの非常事態に電話できないと困ることが予想できたので、音声で通信できるサービスを探しました、そして見つけたのはSIP電話この電話はインターネット上から電話回線に接続して電話することができます、便利そうだったのでSIPサービスを選びました。
   SIPプロバイダーは、ブラステルというプロバイダーにしました、何が決め手かといいますと、国際電話が利用可能、プリペイド式、チャージに支払い用紙を使いコンビニを使うことができる等々。
   次に外でインターネットを使用する場合SIMカードが必要でした、そこで直面したのが、学生は親の同意なしでSIMカードの契約はできないということ、調べている内にプリペイドSIMという単語が、プリペイドシムを試しにAmazonで探したら、びっくり、結構たくさんありました。
