--- a/SystemFolder/SubHtml/m-FrogTube.html
+++ b/SystemFolder/SubHtml/m-FrogTube.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="../CssData/Style-1.css">
 <link rel="shortcut icon" href="../IconData/favicon.ico">
 <style>
+.box-8 {
+  background-color: rgba(255,255,255,0.5);
+}
 .douga_rs {
   width: 65vw;
   height: 40vh;
