--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -63,7 +63,7 @@
                 </div>
                   <table>
                     <tr>
-                      <th>好きな食べ物</th><td>ハーゲンダッツ（基本何でも食べる）</td>
+                      <th>好きな食べ物</th><td>ハーゲンダッツ、どんぶり系（基本何でも食べる）</td>
                     </tr>
                     <tr>
                       <th>好きな動画</th><td>学園ベビーシッターズ、アニメアイチュウ、金装のヴェルメイユ、金色のガッシュベル、デジモンアドベンチャー、ゴン・GON、サンダーバード、あたしンち、21エモン、こち亀、ケロロ軍曹、ルパン三世、思い出など</td>
