--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
  <html lang ="ja">
   <head>
    <meta charset="UTF-8">
+   <meta name="msvalidate.01" content="558B8207B73EAC881E718418A52500B6" />
    <meta name='description' content='プシューサービスのゲートウェイでは、プシューが作ったページへのリンクが一覧になっており見たいページへ行き様々なコンテンツを楽しめます。'>
    <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=6.0, minimum-scale=1.0">
-   <meta name="twitter:card" content="Summary Card with Large Image">
+   <meta name="twitter:card" content="Summary_large_Image">
    <meta name="twitter:site" content="@PusyuuOfficial">
-   <meta name="twitter:title" content="プシューゲートウェイ">
+   <meta name="twitter:title" content="プシューサービス - ゲートウェイ">
    <meta name="twitter:description" content="プシューサービスのゲートウェイでは、プシューが作ったページへのリンクが一覧になっており見たいページへ行き様々なコンテンツを楽しめます。">
-   <meta name="twitter:image" content="./SystemFolder/IconData/logo-black.png">
+   <meta name="twitter:image" content="http://21emon.wjg.jp/SystemFolder/IconData/logo-black.png">
    <title>プシューサービス - ゲートウェイ</title>
+   <link rel="canonical" href="http://21emon.wjg.jp">
    <link rel="shortcut icon" href="./SystemFolder/IconData/favicon.ico">
    <link rel="stylesheet" href="./Profile/GateProStyle.css">
    <!--
@@ -24,8 +26,8 @@
  <body>
   <center>
    <div class="bokasi">
-    <h1>プシューゲートウェイへようこそ</h1>
-    <p>プシューゲートウェイでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.3</p>
+    <h1>プシューサービスゲートウェイへようこそ</h1>
+    <p>こちらのゲートウェイページでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.3</p>
     <h2>問い合わせの方法</h2>
     <p>何かほかに追加してほしいことや希望、やってほしいことや文句など、あればプシューページ、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
     <center>
