--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -9,9 +9,9 @@
     <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
     <!--
       *----------------------------------
-      |  ThisPageVersion: 22.6        |
+      |  ThisPageVersion: 22.7        |
       |  © 2021-2023 By Pusyuu        |
-      |  LastUpdate: 2023-03-05       |
+      |  LastUpdate: 2023-03-10       |
       |  ・。・プシューページ㌨       |
     ----------------------------------*
     -->
@@ -96,35 +96,38 @@
             </div>
               <p>ついこないだ立春を迎えましたね、こんなに寒いのに暦の上では春なんですよね～。最近私は、田舎道の風景を見ながら出かけるのが習慣になってます。</p>
               <p>更新日2022年02月05日</p>
-          <div class="photo_box_yokoori">
-            <div class="photo_box_no_dodai-2">
-              <div class="photo_box_message">
-                <h3>公園の写真</h3>
-                <p>きれいだったので撮った風景の画像です。※グーグルフォトにより少し加工済みです。</p>
-              </div>
-                <div class="photo_box-1">
-                  <img src="../SystemFolder/ImageData/12.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+            <div class="photo_box_yokoori">
+              <article class="photo_box_dodai-2">
+                <div class="photo_box_info">
+                  <div class="photo_box">
+                    <img src="../SystemFolder/ImageData/12.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+                  </div>
+                  <hr>
+                  <h1 class="photo_box_headline">公園の写真</h1>
+                  <p class="photo_box_description">きれいだったので撮った風景の画像です。※グーグルフォトにより少し加工済みです。</p>
                 </div>
-             </div>
-           <div class="photo_box_no_dodai-2">
-             <div class="photo_box_message">
-               <h3>函館夜景</h3>
-               <p>家族旅行で函館で撮った画像です。</p>
-             </div>
-               <div class="photo_box-1">
-                 <img src="../SystemFolder/ImageData/13.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
-               </div>
-            </div>
-            <div class="photo_box_no_dodai-2">
-              <div class="photo_box_message">
-                <h3>曇りの日の東京スカイツリー</h3>
-                <p>私は当時スマホを何台か持っていたので、若気の至りで先生にスマホを一台渡し、そのもう一台でこっそりスカイツリーの写真を撮った時の画像です。あいにくの曇りでしたがそれはそれで珍しいと思い、撮りました。</p>
-              </div>
-                <div class="photo_box-1">
-                  <img src="../SystemFolder/ImageData/14.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+              </article>
+              <article class="photo_box_dodai-2">
+                <div class="photo_box_info">
+                  <div class="photo_box">
+                    <img src="../SystemFolder/ImageData/13.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+                  </div>
+                  <hr>
+                  <h1 class="photo_box_headline">函館夜景</h1>
+                  <p class="photo_box_description">家族旅行で函館で撮った画像です。</p>
                 </div>
+              </article>
+              <article class="photo_box_dodai-2">
+                <div class="photo_box_info">
+                  <div class="photo_box">
+                    <img src="../SystemFolder/ImageData/14.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
+                  </div>
+                  <hr>
+                  <h1 class="photo_box_headline">曇りの日の東京スカイツリー</h1>
+                  <p class="photo_box_description">私は当時スマホを何台か持っていたので、若気の至りで先生にスマホを一台渡し、そのもう一台でこっそりスカイツリーの写真を撮った時の画像です。あいにくの曇りでしたがそれはそれで珍しいと思い、撮りました。</p>
+                </div>
+              </article>
             </div>
-          </div>
         </section>
         <section id="p3">
           <h2 id="p3">プシューサービス</h2>
@@ -207,7 +210,7 @@
         <section id="p5">
           <h2>ニュース</h2>
             <h3>更新情報</h3>
-              <marquee bgcolor="#cccccc" scrollamount="4">このバージョンでは、ニュース情報を更新、プシューログ追加、バグ修正などを行いました。 このページのバージョン22.6</marquee>
+              <marquee bgcolor="#cccccc" scrollamount="4">このバージョンでは、ニュース情報を更新、大きくデザイン変更、バグ修正などを行いました。 このページのバージョン22.7</marquee>
             <h3>ニコニコ動画始めました！！</h3>
               <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
               <p>新規での動画は、皆さんに紹介したいこと等をアップロードしていきたいです。</p>
