--- a/Profile/index.html
+++ b/Profile/index.html
@@ -16,8 +16,6 @@
    -->
 </head>
 <body>
-<div class="bokasi">
-
 <h1>プシュー公式について</h1>
   <div class="center">
   <div class="profile_component">
@@ -46,13 +44,21 @@
   </div>
   </div>
   </div>
-
+<div class="gaiyou">
+<div class="content">
 <h3>プシュー公式アカウント一覧</h3>
+<div class="accaunt">
 <p><a href="https://www.nicovideo.jp/user/125051420"  target="_blank">プシュー公式ニコニコ動画</a></p>
 <p><a href="https://twitter.com/PusyuuOfficial" target="_blank">プシュー公式ツイッター</a></p>
 <p><a href="../MainHtml/index-1.html" target="_blank">プシューページへ行く</a></p>
+</div>
+</div>
+<div class="content">
 <h3>問い合わせフォーム</h3>
+<div class="accaunt">
 <p><a href="http://21emon.wjg.jp:1751/contact.php">このページのお問い合わせはこちら</a></p>
+</div>
+</div>
 </div>
 </body>
 </html>
