--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -9,9 +9,9 @@
     <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
     <!--
       *----------------------------------
-      |  ThisPageVersion: 22.7        |
+      |  ThisPageVersion: 22.8        |
       |  © 2021-2023 By Pusyuu        |
-      |  LastUpdate: 2023-03-10       |
+      |  LastUpdate: 2023-03-11       |
       |  ・。・プシューページ㌨       |
     ----------------------------------*
     -->
@@ -27,7 +27,11 @@
         <div class="hamburger-menu">
           <input type="checkbox" id="menu-btn-check">
           <label for="menu-btn-check" class="menu-btn"><span></span></label>
-          <div class="menu-content"> 
+          <div class="menu-content">
+            <details class="ham_nav_setumei">
+              <summary>ユーザビリティ（説明）</summary>
+              <p>この画面では様々なページのセクションにスクロールすることなく簡単に飛ぶ事ができます。</p>
+            </details>
             <nav class="header__nav nav">
               <ul class="nav__items nav-items" id="NavReload">
                 <li><a href="#">一番上へ↑</a></li>
@@ -99,9 +103,7 @@
             <div class="photo_box_yokoori">
               <article class="photo_box_dodai-2">
                 <div class="photo_box_info">
-                  <div class="photo_box">
-                    <img src="../SystemFolder/ImageData/12.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
-                  </div>
+                  <img src="../SystemFolder/ImageData/12.jpg" alt="画像" class="photo_box" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
                   <hr>
                   <h1 class="photo_box_headline">公園の写真</h1>
                   <p class="photo_box_description">きれいだったので撮った風景の画像です。※グーグルフォトにより少し加工済みです。</p>
@@ -109,9 +111,7 @@
               </article>
               <article class="photo_box_dodai-2">
                 <div class="photo_box_info">
-                  <div class="photo_box">
-                    <img src="../SystemFolder/ImageData/13.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
-                  </div>
+                  <img src="../SystemFolder/ImageData/13.jpg" alt="画像" class="photo_box" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
                   <hr>
                   <h1 class="photo_box_headline">函館夜景</h1>
                   <p class="photo_box_description">家族旅行で函館で撮った画像です。</p>
@@ -119,9 +119,7 @@
               </article>
               <article class="photo_box_dodai-2">
                 <div class="photo_box_info">
-                  <div class="photo_box">
-                    <img src="../SystemFolder/ImageData/14.jpg" alt="画像" class="img-rs_saidai" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
-                  </div>
+                  <img src="../SystemFolder/ImageData/14.jpg" alt="画像" class="photo_box" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
                   <hr>
                   <h1 class="photo_box_headline">曇りの日の東京スカイツリー</h1>
                   <p class="photo_box_description">私は当時スマホを何台か持っていたので、若気の至りで先生にスマホを一台渡し、そのもう一台でこっそりスカイツリーの写真を撮った時の画像です。あいにくの曇りでしたがそれはそれで珍しいと思い、撮りました。</p>
