--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -208,7 +208,7 @@
         <section id="p5">
           <h2>ニュース</h2>
             <h3>更新情報</h3>
-              <marquee bgcolor="#cccccc" scrollamount="4">このバージョンでは、ニュース情報を更新、大きくデザイン変更、バグ修正などを行いました。 このページのバージョン22.7</marquee>
+              <marquee bgcolor="#cccccc" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザイン変更、バグ修正などを行いました。 このページのバージョン22.8</marquee>
             <h3>ニコニコ動画始めました！！</h3>
               <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
               <p>新規での動画は、皆さんに紹介したいこと等をアップロードしていきたいです。</p>
