--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -86,7 +86,7 @@
               </div>
             </div>
           <h3>このページの仕様</h3>
-            <p>このページは、横幅が250px以下のサイズでは非対応ですので予めご了承ください。</p>
+            <p>このページは最新のソースコード利用してる部分が存在するため、IEなどの古いブラウザ、横幅が250px以下のサイズでは非対応ですので予めご了承ください。※それでもご覧になりたい方は、自己責任でご覧ください。</p>
             <p>ご質問、お問い合わせまたはご意見、ご感想がありましたら、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
             <p>このページではプシューログを見たり、プシューが提供しているサービス等で楽しむことができます。</p>
             <p>このサービス（ページ）では、できるだけ依存しない、できるだけオープンソースで（<a href="https://github.com/PusyuuOfficial/WebSite" target="_blank">ソースコードはこちら</a>）、サービス上での情報収集をできるだけ行わないをモットーに作成してます。</p>
