--- a/Profile/index.html
+++ b/Profile/index.html
@@ -36,28 +36,25 @@
   <th>好きな趣味は</th><td>プログラミング（ハイパーテキスト、JS、Kotlin）、電子工作（音が鳴るもの）、考える事（ほぼ何でも）、工作（小屋づくり、小物づくり）、料理（オムライス、チャーハン、半熟目玉焼き）、縫い物（穴あき修正、小物づくり）、理科（電気関連）、農業（農作物育て）</td>
   </tr>
   </table>
+  <hr>
   <h3>コメント<h3>
   <p style="color: #4d4d4d;">このサービス（ページ）では、できるだけ依存しない、できるだけオープンソースで（<a href="https://github.com/PusyuuOfficial/WebSite" target="_blank">ソースコードはこちら</a>）、サービス上での情報収集をできるだけ行わないをモットーに作成してます。
   このページは、1からWindows標準NotePad.exeを使用して、コーディングしてます。
   どうでもよいですがネタとして言います。私は、ASD、ADHDを、持ってます。</p>
+  <hr>
+  <h3>プシュー公式アカウント一覧</h3>
+  <ol>
+    <li><a href="https://www.nicovideo.jp/user/125051420"  target="_blank">プシュー公式ニコニコ動画</a></li>
+    <li><a href="https://twitter.com/PusyuuOfficial" target="_blank">プシュー公式ツイッター</a></li>
+    <li><a href="../MainHtml/index-1.html" target="_blank">プシューページへ行く</a></li>
+  </ol>
+  <hr>
+  <ol>
+    <h3>問い合わせフォーム</h3>
+    <li><a href="http://21emon.wjg.jp:1751/contact.php">このページのお問い合わせはこちら</a></li>
+  </ol>
   </div>
   </div>
   </div>
-<div class="gaiyou">
-<div class="content">
-<h3>プシュー公式アカウント一覧</h3>
-<div class="accaunt">
-<p><a href="https://www.nicovideo.jp/user/125051420"  target="_blank">プシュー公式ニコニコ動画</a></p>
-<p><a href="https://twitter.com/PusyuuOfficial" target="_blank">プシュー公式ツイッター</a></p>
-<p><a href="../MainHtml/index-1.html" target="_blank">プシューページへ行く</a></p>
-</div>
-</div>
-<div class="content">
-<h3>問い合わせフォーム</h3>
-<div class="accaunt">
-<p><a href="http://21emon.wjg.jp:1751/contact.php">このページのお問い合わせはこちら</a></p>
-</div>
-</div>
-</div>
 </body>
 </html>
