--- a/index.html
+++ b/index.html
@@ -25,26 +25,28 @@
   </head>
  <body>
   <center>
-   <div class="bokasi">
-    <h1>プシューサービスゲートウェイへようこそ</h1>
-    <p>こちらのゲートウェイページでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.3</p>
-    <h2>問い合わせの方法</h2>
-    <p>何かほかに追加してほしいことや希望、やってほしいことや文句など、あればプシューページ、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
-    <center>
-    <li><iframe width="180vw" height="100vh" title="アクセスカウンター" src="http://21emon.wjg.jp:2016/AccessCounter.html"></iframe><li>
-    <li><img width="180vw" height="100vh" src="./SystemFolder/IconData/logo-black.png" alt="入り口用ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"><li>
-    </center>
-    <h3>通常版プシューページへはこちら↓</h3>
-    <p>プシューページでは、プシューログ（プシューの心理的な知恵や面白いことを書いたブログ）やプシューサービス（音楽のストリーミングや、プシューが作った自作アプリを使ったり見たりできるサービス）などを見ることができます。</p>
-    <button type=“button” onclick="location.href='./MainHtml/index-1.html'">通常版プシューページへ行く</button>
-    <h3>他人版プチューページへはこちら↓</h3>
-    <p>プチューページでは、プチュー豆知識やおすすめの音楽などをストリーミングなどができます。</p>
-    <button type=“button” onclick="location.href='https://21emon.wjg.jp:7733'">他人版プチューページへ行く</button>
-    <h3>プシュー公式プロフィールはこちら↓</h3>
-    <p>プシュープロフィールでは、プシューの好きな事や物を見ることができます。</p>
-    <button type=“button” onclick="location.href='./Profile/index.html'">プシュー公式プロフィールへ行く</button>
-    <br>
+   <div class="yohaku">
+     <div class="bokasi">
+       <h1>プシューサービスゲートウェイへようこそ</h1>
+       <p>こちらのゲートウェイページでは、プシューサービスへのリンクが一覧になっており、見たいページへ行き、各コンテンツを見ることができます。プシューサービスでは、プライバシーに十点を置いており、あなたが、データを自主的に提供することがない限り、データをいただくことはありません。安心してご利用ください。このプシューゲートウェイのバージョン5.3</p>
+       <h2>問い合わせの方法</h2>
+       <p>何かほかに追加してほしいことや希望、やってほしいことや文句など、あればプシューページ、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
+       <center>
+         <li><iframe width="180vw" height="100vh" title="アクセスカウンター" src="http://21emon.wjg.jp:2016/AccessCounter.html"></iframe><li>
+         <li><img width="180vw" height="100vh" src="./SystemFolder/IconData/logo-black.png" alt="入り口用ロゴ画像" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;"><li>
+       </center>
+         <h3>通常版プシューページへはこちら↓</h3>
+         <p>プシューページでは、プシューログ（プシューの心理的な知恵や面白いことを書いたブログ）やプシューサービス（音楽のストリーミングや、プシューが作った自作アプリを使ったり見たりできるサービス）などを見ることができます。</p>
+         <button type=“button” onclick="location.href='./MainHtml/index-1.html'">通常版プシューページへ行く</button>
+         <h3>他人版プチューページへはこちら↓</h3>
+         <p>プチューページでは、プチュー豆知識やおすすめの音楽などをストリーミングなどができます。</p>
+         <button type=“button” onclick="location.href='https://21emon.wjg.jp:7733'">他人版プチューページへ行く</button>
+         <h3>プシュー公式プロフィールはこちら↓</h3>
+         <p>プシュープロフィールでは、プシューの好きな事や物を見ることができます。</p>
+         <button type=“button” onclick="location.href='./Profile/index.html'">プシュー公式プロフィールへ行く</button>
+         <br>
+       </div>
+     </center>
    </div>
-  </center>
  </body>
 </html>
