--- a/SystemFolder/SubHtml/b-androidx86nosyoukai.html
+++ b/SystemFolder/SubHtml/b-androidx86nosyoukai.html
@@ -18,7 +18,7 @@
   </h1> 
   <nav class="header__nav nav">
    <ul class="nav__items nav-items">
-    <li class="current"><a href="./b-omosiro.html">現在のページ</a></li>
+    <li class="current"><a href="./b-androidx86nosyoukai.html">現在のページ</a></li>
     <li><a href="../../MainHtml/index-1.html#p4">プシューログに戻る</a></li>
    </ul>
   </nav>
@@ -38,25 +38,25 @@
 </ol>
 
 <h3 id="p1">語る経緯</h3>
-<p>少し前は私はウェブではなく様々なOS例えばAndroidのカスタムロムの派生やLinux派生やWindows派生、今回紹介するAndroidX86派生等ををいじくりまわしている人でした（まぁそれだけでは収まりませんでしたがw）その時に、使って使いやすかったものをここで紹介したいと思います。</p>
+<p>少し前は様々なOSをいじっている人でした、例えばAndroidのカスタムロムの派生、Linux派生、Windows派生、今回紹介するAndroid-x86派生、等ををいじくりまわしている人でした。（まぁそれだけでは収まりませんでしたがw）その時に、使って使いやすかったものをここで紹介したいと思います。</p>
 
 <h3 id="p2">使いやすかったAndroid-X86派生一覧</h3>
 
 <h4>Prime OS</h4>
 <p>プライムＯＳは私が試したAndroid-x86のＯＳの中では特に使いやすかったと思います。理由はシステムのカスタマイズが可能なところです。
-このＯＳはもともとＲＯＯＴ化されておりもとから入っているアプリを消去したり、システムアプリ化することで初期化しても戻るようにしたりとができます。
-更にたいていは標準のAndroid-x86では動かない（x64 EFI）のみではありますがアプリも多少は動くように改良がなされてました。
-そんな感じでまるで馬乗りの言うことをある程度は聞いてくれるＯＳでした。ですが流石にWindowsやLinuxには勝てませんでした。</p>
+このＯＳはもともとＲＯＯＴ化されており、もとから入っているアプリを消去したり、システムアプリ化することで初期化しても戻るようにしたりする事ができます。
+更に、標準のAndroid-x86では動かない（x64 EFIのみではありますが）アプリも多少は動くように改良がなされてました。
+そんな感じで、まるで馬乗りの言うことをある程度は聞いてくれるＯＳでした。ですが流石にWindowsやLinuxには勝てませんでした。</p>
 <a href="https://www.primeos.in/" target="_blank">Prime OSのダウンロードリンクはこちら</a>
 
 <h4>Android-x86</h4>
-<p>このOSはほぼAndroidそのままでアンドロイドに詳しい方であれば使いにくいのは変わりないかもしれませんが使いこなすことは可能です。
-このOSで私の中で試してバグなく動くことを試すことができたアプリはマインクラフトでした特に落ちることなくPC版同様の操作ができました。</p>
+<p>このOSはほぼAndroidそのままで、アンドロイドに詳しい方であれば、使いにくいのは変わりないかもしれませんが使いこなすことは可能です。
+このOSで試して、バグなく動くことを試すことができたアプリはマインクラフトでした。特に落ちることなくPC版同様の操作ができました。</p>
 <a href="https://www.android-x86.org/" target="_blank">Android-x86のダウンロードリンクはこちら</a>
 
 <h3 id="p3">まとめ</h3>
-<p>今回紹介してたものは極わずかでありAndroid x86派生OSはもっとあります。それより私としては使える使えないの問題より、神秘なOSにロマンを感じました。
-だからこそ私はOS探しの旅に出たんだと思います。最近はめっきりやらなくなってしまいましたが決して無駄な経験ではなかったと今は特に思います。
+<p>今回紹介してたものは極わずかであり、Android x86派生OSはもっとあります。それより私としては、使える、使えないの問題より神秘なOSにロマンを感じました。
+だからこそ私はOS探しの旅に出たんだと思います。最近はめっきりやらなくなってしまいましたが、決して無駄な経験ではなかったと、今は、特に思います。
 皆さんも、もしかしたら面白いと感じるかもしれませんよ⤴（まねされる場合は完全自己責任でよろしくお願いします。）</p>
 
  </div>
