--- a/SystemFolder/SubHtml/b-zinseinohiketu.html
+++ b/SystemFolder/SubHtml/b-zinseinohiketu.html
@@ -43,8 +43,8 @@
 
   <h3 id="p2">やり方と手順</h3>
   <img src="../ImageData/mayoi.png" alt="画像" class="img-rs_tyuu" oncontextmenu="return false;" onselectstart="return false;" onmousedown="return false;">
-  <p>前置きでも説明した通り一度生きがいとは何だろうというのは置いておき、今、自分が今楽しいと感じる物さえあれば私はそれで十分だと思いますし、これは生きる意味にもつながります、実際問題生きる意味については誰にもわかりません。ですが一つだけ言えます、何かしらの目標を持つことでそれを意味としていきることができます。
-  ではやり方の本題に行きます、これは前回の”ネガティブとは何なのか”でも説明しましたが、自分自身にほんの少しでもこれはできるというものがあればそれを挑戦し楽しめるあるいは気持ちが良くなる方向で、間が開いても継続することが大切だと私は思います。
+  <p>前置きでも説明した通り、一度生きがいとは何だろうというのは置いておき、今、自分が今楽しいと感じる物さえあれば私はそれで十分だと思いますし、これは生きる意味にもつながります。実際問題生きる意味については誰にもわかりません。ですが一つだけ言えます。何かしらの目標を持つことでそれを意味としていきることができます。
+  ではやり方の本題に行きます。これは前回の”ネガティブとは何なのか”でも説明しましたが、自分自身にほんの少しでもこれはできるというものがあればそれを挑戦し楽しめるあるいは気持ちが良くなる方向で、間が開いても継続することが大切だと私は思います。
   次に、自信をつけるために人と比べずに自己満足をしてください。この時、他人とは絶対に比べないでください。それは何故か、上には上がいるためあなたは絶望し、絶対に不幸になります。←因みにこれが、１番の不幸になる方法です。やめといたほうが良いですが、やりたければ自己責任でどうぞw。
   上記の内容は基本のベースですが、更に良くしたいのであれば、無能なことを自覚して、自分にとってストレスになることをやめてみてください。
   一つ言っておきますが人間は何かしらの物事にはじめて挑戦するときは特に恐怖やストレスを感じるように設計されてます。
