--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -9,9 +9,9 @@
     <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
     <!--
       *----------------------------------
-      |  ThisPageVersion: 22.8        |
+      |  ThisPageVersion: 22.9        |
       |  © 2021-2023 By Pusyuu        |
-      |  LastUpdate: 2023-03-11       |
+      |  LastUpdate: 2023-03-18       |
       |  ・。・プシューページ㌨       |
     ----------------------------------*
     -->
@@ -82,12 +82,12 @@
                       <th>好きな趣味</th><td>プログラミング（ハイパーテキスト、JS、Kotlin）、電子工作（音が鳴るもの）、考える事（ほぼ何でも）、工作（小屋づくり、小物づくり）、料理（オムライス、チャーハン、半熟目玉焼き）、縫い物（穴あき修正、小物づくり）、理科（電気関連）、農業（農作物育て）</td>
                     </tr>
                   </table>
-                <p>私としてはどうでもよいですがネタとして一応伝えます。プシューは先天性のADHDとASDを持ってます。私は特にそのことでおっくうには感じてません一つの得意分野としてとらえ成長が遅いだけなので人一倍勉強しながらそれなりに、めんどくさいので以下省略w</p>
+                <p>私としてはどうでもよいですが、ネタとして一応伝えます。プシューは先天性のADHDとASDを持ってます。めんどくさいので以下省略w</p>
               </div>
             </div>
           <h3>このページの仕様</h3>
-            <p>このページは最新のソースコード利用してる部分が存在するため、IEなどの古いブラウザ、横幅が250px以下のサイズでは非対応ですので予めご了承ください。※それでもご覧になりたい方は、自己責任でご覧ください。</p>
-            <p>ご質問、お問い合わせまたはご意見、ご感想がありましたら、ナビゲーションバーのお問い合わせフォームより、お送りください。</p>
+            <p>このページは、最新のソースコード利用してる部分が存在するため、IEなどの古いブラウザ、横幅が250px以下のサイズでは非対応ですので、予めご了承ください。※それでもご覧になりたい方は、自己責任でご覧ください。</p>
+            <p>ご質問、お問い合わせまたはご意見、ご感想がありましたら、ナビゲーションバーのお問い合わせフォームよりお送りください。</p>
             <p>このページではプシューログを見たり、プシューが提供しているサービス等で楽しむことができます。</p>
             <p>このサービス（ページ）では、できるだけ依存しない、できるだけオープンソースで（<a href="https://github.com/PusyuuOfficial/WebSite" target="_blank">ソースコードはこちら</a>）、サービス上での情報収集をできるだけ行わないをモットーに作成してます。</p>
             <p>このページは、1からWindows標準NotePad.exeを使用して、コーディングしてます。</p>
@@ -208,14 +208,14 @@
         <section id="p5">
           <h2>ニュース</h2>
             <h3>更新情報</h3>
-              <marquee bgcolor="#cccccc" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザイン変更、バグ修正などを行いました。 このページのバージョン22.8</marquee>
+              <marquee bgcolor="#cccccc" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザイン変更、文字の誤字脱字修正、バグ修正などを行いました。 このページのバージョン22.9</marquee>
             <h3>ニコニコ動画始めました！！</h3>
               <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
               <p>新規での動画は、皆さんに紹介したいこと等をアップロードしていきたいです。</p>
               <p class="text"><a href="https://www.nicovideo.jp/user/125051420" target="_blank">プシューわんこのニコニコ動画へジャンプ</a></p>
             <h3>ツイッター始めました！！</h3>
               <p>ツイッターではプシューサービスの最新情報などを発信していきたいです。</p>
-              <p>とうとうツイッターやめました一年間ありがとうございました。様々な人、年代の方々と様々な話をしましたがどれも良い思い出です。合計35人のフォロワー。最後に、ご迷惑もおかけしましたが皆さんありがとう私は嬉しかったです。</p>
+              <p>とうとうツイッターやめました、一年間ありがとうございました。様々な人、年代の方々と様々な話をしましたが、どれも良い思い出です。合計35人のフォロワー、皆さんありがとう、私は嬉しかったです。</p>
               <p>と思いきやまた始めました今回からはプシューサービスの最新情報発信を目的としてやっていきます。</p>
               <p class="text"><a href="https://twitter.com/Pusyuuofficial" target="_blank">プシュー公式ツイッターへジャンプ</a></p>
         </section>
