--- a/MainHtml/index-1.html
+++ b/MainHtml/index-1.html
@@ -9,9 +9,9 @@
     <script src="../SystemFolder/JsData/Script.js" type="text/javascript" charset="UTF-8"></script>
     <!--
       *----------------------------------
-      |  ThisPageVersion: 22.9        |
+      |  ThisPageVersion: 23.0        |
       |  © 2021-2023 By Pusyuu        |
-      |  LastUpdate: 2023-03-18       |
+      |  LastUpdate: 2023-03-19       |
       |  ・。・プシューページ㌨       |
     ----------------------------------*
     -->
@@ -47,6 +47,9 @@
         </div>
       </div>
     </header>
+      <div id="loading">
+        <div class="load_content">みすぼらしい画面消去中</div>
+      </div>
       <div class="show">
         <strong>PusyuuWorld</strong>
         <div class="scroll">SCROLL<span class="arw"></span></div>
@@ -208,7 +211,7 @@
         <section id="p5">
           <h2>ニュース</h2>
             <h3>更新情報</h3>
-              <marquee bgcolor="#cccccc" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザイン変更、文字の誤字脱字修正、バグ修正などを行いました。 このページのバージョン22.9</marquee>
+              <marquee bgcolor="#cccccc" scrollamount="4">このバージョンでは、ニュース情報を更新、少々デザイン変更、主にヘッダー周辺を変更、バグ修正などを行いました。 このページのバージョン23.0</marquee>
             <h3>ニコニコ動画始めました！！</h3>
               <p>ニコニコ動画では今まで動画としてこのウェブサイトに貼ってあった動画や、</p>
               <p>新規での動画は、皆さんに紹介したいこと等をアップロードしていきたいです。</p>
